# rview

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.third_party  README.md
include/: common.h  filelistmodel.h  filelistwidget.h  fileutil.h  glwidget.h  image.h  imageloader.h  maincontrol.h  mainwindow.h  shaders.h
resource/: app.icns  icon.rc  icons.qrc
src/: filelistmodel.cpp  filelistwidget.cpp  fileutil.cpp  glwidget.cpp  image.cpp  imageloader.cpp  main.cpp  maincontrol.cpp  mainwindow.cpp  mainwindow.ui  shaders.cpp
tools/: make_icns.sh
